# mldevops_exercise

./: .gitignore
ex1/: classification_mnist.ipynb
ex2/: dimensionality_reduction.ipynb
ex3/: speech_recognition.ipynb
ex4/: ml_ann_introduction_v4.ipynb
my_project/: pyproject.toml  requirements.txt
