[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["kskorupka-agh <kskorupka.agh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
absl-py = "2.1.0"
aiohappyeyeballs = "2.4.3"
aiohttp = "3.11.2"
aiosignal = "1.3.1"
argcomplete = "3.5.1"
asttokens = "2.4.1"
attrs = "24.2.0"
black = "24.10.0"
certifi = "2024.8.30"
cffi = "1.17.1"
cfgv = "3.4.0"
charset-normalizer = "3.4.0"
click = "8.1.7"
colorama = "0.4.6"
comm = "0.2.2"
contourpy = "1.3.1"
cycler = "0.12.1"
debugpy = "1.8.8"
decorator = "5.1.1"
distlib = "0.3.9"
docker-pycreds = "0.4.0"
executing = "2.1.0"
fastjsonschema = "2.20.0"
filelock = "3.16.1"
fonttools = "4.55.0"
frozenlist = "1.5.0"
fsspec = "2024.10.0"
gitdb = "4.0.11"
gitpython = "3.1.43"
grpcio = "1.68.0"
identify = "2.6.2"
idna = "3.10"
ipykernel = "6.29.5"
ipython = "8.29.0"
ipywidgets = "8.1.5"
jedi = "0.19.2"
jinja2 = "3.1.4"
jsonschema = "4.23.0"
jsonschema-specifications = "2024.10.1"
jupyter-client = "8.6.3"
jupyter-core = "5.7.2"
jupyterlab-widgets = "3.0.13"
kiwisolver = "1.4.7"
markdown = "3.7"
markupsafe = "3.0.2"
matplotlib = "3.9.2"
matplotlib-inline = "0.1.7"
mpmath = "1.3.0"
multidict = "6.1.0"
mypy-extensions = "1.0.0"
nbformat = "5.10.4"
nest-asyncio = "1.6.0"
networkx = "3.4.2"
nodeenv = "1.9.1"
numpy = "2.1.3"
nvidia-cublas-cu12 = "12.4.5.8"
nvidia-cuda-cupti-cu12 = "12.4.127"
nvidia-cuda-nvrtc-cu12 = "12.4.127"
nvidia-cuda-runtime-cu12 = "12.4.127"
nvidia-cudnn-cu12 = "9.1.0.70"
nvidia-cufft-cu12 = "11.2.1.3"
nvidia-curand-cu12 = "10.3.5.147"
nvidia-cusolver-cu12 = "11.6.1.9"
nvidia-cusparse-cu12 = "12.3.1.170"
nvidia-nccl-cu12 = "2.21.5"
nvidia-nvjitlink-cu12 = "12.4.127"
nvidia-nvtx-cu12 = "12.4.127"
packaging = "24.2"
parso = "0.8.4"
pathspec = "0.12.1"
pexpect = "4.9.0"
pillow = "11.0.0"
pipx = "1.7.1"
platformdirs = "4.3.6"
pre-commit = "4.0.1"
prompt-toolkit = "3.0.48"
propcache = "0.2.0"
protobuf = "5.28.3"
psutil = "6.1.0"
ptyprocess = "0.7.0"
pure-eval = "0.2.3"
pycparser = "2.22"
pygments = "2.18.0"
pyparsing = "3.2.0"
python-dateutil = "2.9.0.post0"
pyyaml = "6.0.2"
pyzmq = "26.2.0"
referencing = "0.35.1"
requests = "2.32.3"
rpds-py = "0.21.0"
sentry-sdk = "2.18.0"
setproctitle = "1.3.4"
setuptools = "75.5.0"
six = "1.16.0"
smmap = "5.0.1"
soundfile = "0.12.1"
stack-data = "0.6.3"
sympy = "1.13.1"
tensorboard = "2.18.0"
tensorboard-data-server = "0.7.2"
tokenize-rt = "6.1.0"
torch = "2.5.1"
torchaudio = "2.5.1"
torchvision = "0.20.1"
tornado = "6.4.1"
tqdm = "4.67.0"
traitlets = "5.14.3"
triton = "3.1.0"
typing-extensions = "4.12.2"
urllib3 = "2.2.3"
userpath = "1.9.2"
virtualenv = "20.27.1"
wandb = "0.18.7"
wcwidth = "0.2.13"
werkzeug = "3.1.3"
wheel = "0.45.0"
widgetsnbextension = "4.0.13"
yarl = "1.17.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
